--- a/app.json
+++ b/app.json
@@ -6,18 +6,10 @@
     "pages/index/f_Role/f_Role",
     "pages/index/structure/structure",
     "pages/index/procedures/procedures",
-    "pages/index/communication/communication",
-    "pages/production/production",
+    "pages/index/communication/communication"
     "pages/fprocedure/fprocedure",
     "pages/vprocedure/vprocedure",
     "pages/lprocedures/lprocedures",
-    "pages/production/produce/produce",
-    "pages/production/storage/storage",
-    "pages/production/stocks/stocks",
-    "pages/order/order",
-    "pages/production/consignment/consignment",
-    "pages/production/orderstatistics/orderstatistics",
-    "pages/production/adjustment/adjustment",
     "pages/marketing/marketing",
     "pages/marketing/goods/goods",
     "pages/marketing/channel/channel",
