--- a/app.json
+++ b/app.json
@@ -16,27 +16,24 @@
     "pages/marketing/coupon/coupon",
     "pages/marketing/redpackets/redpackets",
     "pages/marketing/membership/membership",
-    "pages/marketing/distributor/distributor",
-    "pages/marketing/distribution/distribution",
     "pages/marketing/statement/statement",
     "pages/marketing/storeflow/storeflow",
     "pages/marketing/closerate/closerate",
     "pages/marketing/income/income",
     "pages/marketing/capital/capital",
+    "pages/marketing/activities/activities"
     "pages/customer/customer",
     "pages/customer/addresslist/addresslist",
-    "pages/customer/productreport/productreport",
-    "pages/customer/marketingreport/marketingreport",
     "pages/customer/live/live",
     "pages/customer/deal/deal",
     "pages/customer/returns/returns",
-    "pages/customer/analyzing/analyzing",
-    "pages/customer/evaluate/evaluate",
     "pages/customer/logistics/logistics",
+    "pages/customer/evaluate/evaluate",
+    "pages/customer/analyzing/analyzing",
+    "pages/customer/evaluation/evaluation",
     "pages/customer/communication/communication",
     "pages/customer/contactfriends/contactfriends",
     "pages/customer/accounting/accounting",
-    "pages/customer/rcustomer/rcustomer",
     "util/login/login",
     "util/wxchat/wxchat",
     "util/approve/approve",
