--- a/app.json
+++ b/app.json
@@ -26,26 +26,26 @@
       {
         "pagePath": "index/shops/shops",
         "text": "商城",
-        "iconPath": "images/shops.png",
-        "selectedIconPath": "images/shops-1.png"
+        "iconPath": "images/icon_cart.png",
+        "selectedIconPath": "images/icon_cart_HL.png"
       },
       {
         "pagePath": "index/manage/manage",
         "text": "管理",
-        "iconPath": "images/index.png",
-        "selectedIconPath": "images/index-1.png"
+        "iconPath": "images/icon_my.png",
+        "selectedIconPath": "images/icon_my_HL.png"
       },
       {
         "pagePath": "index/marketing/marketing",
         "text": "营销",
-        "iconPath": "images/marketing.png",
-        "selectedIconPath": "images/marketing-1.png"
+        "iconPath": "images/icon_forum.png",
+        "selectedIconPath": "images/icon_forum_HL.png"
       },
       {
         "pagePath": "index/customer/customer",
         "text": "客服",
-        "iconPath": "images/customer.png",
-        "selectedIconPath": "images/customer-1.png"
+        "iconPath": "images/icon_component.png",
+        "selectedIconPath": "images/icon_component_HL.png"
       }
     ]
   },
@@ -55,15 +55,14 @@
       "pages": [
         "f_Role/f_Role",
         "vprocedure/vprocedure",
-        "lprocedures/lprocedures",
         "shops/address/add/add",
         "shops/cart/cart",
-        "shops/catecory/category",
+        "shops/category/category",
         "shops/give/address/address",
         "shops/goods/list/list",
         "shops/member/login/login",
         "shops/order/give/give",
-        "shops/zhongchou"
+        "shops/zhongchou/zhongchou"
       ]
     },
     {
@@ -83,9 +82,9 @@
         "capital/capital",
         "logistics/logistics",
         "deal/deal",
-        "returns/returns"
+        "returns/returns",
         "evaluate/evaluate",
-        "analyzing/analyzin",
+        "analyzing/analyzing",
         "contactfriends/contactfriends"
       ]
     }
