--- a/project.config.json
+++ b/project.config.json
@@ -4,22 +4,23 @@
 		"urlCheck": true,
 		"es6": true,
 		"postcss": true,
-		"minified": true
+		"minified": true,
+		"newFeature": true
 	},
-	"compileType": "weapp",
-	"libVersion": "1.6.0",
+	"compileType": "miniprogram",
+	"libVersion": "1.9.91",
 	"appid": "wx85099b7e537bcabd",
 	"projectname": "%E4%B9%90%E5%86%9C%E6%B1%87%E6%9C%8D%E5%8A%A1%E5%B9%B3%E5%8F%B0",
 	"condition": {
-		"weapp": {
-			"current": -1,
-			"list": []
-		},
 		"search": {
 			"current": -1,
 			"list": []
 		},
 		"conversation": {
+			"current": -1,
+			"list": []
+		},
+		"miniprogram": {
 			"current": -1,
 			"list": []
 		}
