--- a/app.json
+++ b/app.json
@@ -57,12 +57,23 @@
         "lprocedures/lprocedures",
         "vprocedure/vprocedure",
         "shops/address/add/add",
-        "shops/cart/cart",
+        "shops/address/list/list",
         "shops/category/category",
+        "shops/cart/cart",
+        "shops/give//receive/receive",
         "shops/give/address/address",
         "shops/goods/list/list",
+        "shops/goods/detail/detail",
         "shops/member/login/login",
+        "shops/member/delivergoods/delivergoods",
+        "shops/member/fenxiaologin/fenxiaologin",
+        "shops/member/give/give",
+        "shops/member/money/money",
+        "shops/member/readorder/readorder",
+        "shops/member/finish/finish",
+        "shops/member/index/index",
         "shops/order/give/give",
+        "shops/order/checkout/checkout",
         "shops/zhongchou/zhongchou"
       ]
     },
