--- a/app.json
+++ b/app.json
@@ -26,27 +26,27 @@
     "list": [
       {
         "pagePath": "index/shops/shops",
-        "text": "商城",
-        "iconPath": "images/icon_cart.png",
-        "selectedIconPath": "images/icon_cart_HL.png"
-      },
-      {
-        "pagePath": "index/manage/manage",
-        "text": "管理",
-        "iconPath": "images/icon_my.png",
-        "selectedIconPath": "images/icon_my_HL.png"
+        "text": "首页",
+        "iconPath": "images/icon_component.png",
+        "selectedIconPath": "images/icon_component_HL.png"
       },
       {
         "pagePath": "index/marketing/marketing",
-        "text": "营销",
+        "text": "分类",
         "iconPath": "images/icon_forum.png",
         "selectedIconPath": "images/icon_forum_HL.png"
       },
       {
         "pagePath": "index/customer/customer",
-        "text": "客服",
-        "iconPath": "images/icon_component.png",
-        "selectedIconPath": "images/icon_component_HL.png"
+        "text": "购物车",
+        "iconPath": "images/icon_cart.png",
+        "selectedIconPath": "images/icon_cart_HL.png"
+      },
+      {
+        "pagePath": "index/manage/manage",
+        "text": "我的",
+        "iconPath": "images/icon_my.png",
+        "selectedIconPath": "images/icon_my_HL.png"
       }
     ]
   },
