--- a/project.config.json
+++ b/project.config.json
@@ -20,9 +20,25 @@
 			"current": -1,
 			"list": []
 		},
-		"miniprogram": {
+		"plugin": {
 			"current": -1,
 			"list": []
+		},
+		"game": {
+			"current": -1,
+			"list": []
+		},
+		"miniprogram": {
+			"current": 0,
+			"list": [
+				{
+					"id": 0,
+					"name": "signup",
+					"pathName": "pages/signup/signup",
+					"query": "sjid=59f08fbb67f356004449a4a4&type=channel",
+					"scene": "1007"
+				}
+			]
 		}
 	}
 }
