--- a/project.config.json
+++ b/project.config.json
@@ -29,7 +29,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": -1,
+			"current": 1,
 			"list": [
 				{
 					"id": 0,
@@ -37,6 +37,12 @@
 					"pathName": "pages/signup/signup",
 					"query": "sjid=59f08fbb67f356004449a4a4&type=channel",
 					"scene": "1007"
+				},
+				{
+					"id": -1,
+					"name": "channelOnHome",
+					"pathName": "pages/home/home",
+					"query": "sjid=5a2955bf8d6d810061a5cc0a"
 				}
 			]
 		}
